--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "input-otp": "^1.0.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.350.0",
+    "moment": "^2.30.1",
     "next": "14.1.3",
     "next-auth": "^5.0.0-beta.15",
     "next-themes": "^0.2.1",
